# ghc-typelits-spellcheck

./: LICENSE  README.md  ghc-typelits-spellcheck.cabal  stack.yaml
src/GHC/TypeLits/: Dictionary.hs
src/GHC/TypeLits/Dictionary/: Solver.hs
test/: Spec.hs
