name:                ghc-typelits-spellcheck
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jonathanlking/lookup-plugin#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan King
maintainer:          jonathanlking@me.com
copyright:           Copyright: (c) 2018 Jonathan King
category:            Type system
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     GHC.TypeLits.Dictionary
                       GHC.TypeLits.Dictionary.Solver
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       ghc >= 8.0.1,
                       ghc-tcplugins-extra >= 0.3,
                       haspell >= 1.1.0

test-suite ghc-typelits-spellcheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       ghc-typelits-spellcheck,
                       tasty       >= 0.10,
                       tasty-hunit >= 0.9
  ghc-options:         -O0 -dcore-lint -threaded -rtsopts -with-rtsopts=-N -ddump-tc-trace
  default-language:    Haskell2010
